force-app/main/default/objects/Mobile_Review__c/Mobile_Review__c.object-meta.xml
<CustomObject>
    <label>Mobile Review</label>
    <nameField>
        <label>MobileReview Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mobile Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>