force-app/main/default/objects/Mobile_Review__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Mobile Reviews</relationshipLabel>
    <relationshipName>Mobile_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>