force-app/main/default/objects/Mobile_Review__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Mobile Reviews</relationshipLabel>
    <relationshipName>Mobile_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>